--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,4 @@
+<head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-J57QMWVXMZ"></script>
 <script>
