--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,13 +5,13 @@ layout: default
 <div class="page">
 
   <header class="post-header">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108085250-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-J57QMWVXMZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-108085250-1');
+  gtag('config', 'G-J57QMWVXMZ');
 </script>
 
 
