--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,8 @@
       <ul id="js-navigation-menu" class="navigation-menu show">
       <li class="nav-link"><a href="{{ site.baseurl }}/" class="logo"><strong>Home</strong></a>
       <li class="nav-link"><a href="https://shasha-li.github.io/research"><strong>Research</strong></a>
-      <li class="nav-link"><a href="https://shasha-li.github.io/about"><strong>About Me</strong></a>
-      <li class="nav-link"><a href="https://shasha-li.github.io/teachings"><strong>Teachings</strong></a>
+      <li class="nav-link"><a href="https://shasha-li.github.io/CV"><strong>About Me (CV)</strong></a>
+      <li class="nav-link"><a href="https://shasha-li.github.io/teachings"><strong>Teaching</strong></a>
       </ul>
     </nav>
   </div>
