--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
     <div class="site-navigation">
-      <p><a href="mailto:shasha.li@unibocconi.it"><i class="fa fa-envelope"></i> E-mail</a></p>
+      <p><a href="mailto:shasha.li@unibocconi.it"><i class="fa fa-envelope"></i> E-mail: shasha.li@unibocconi.it</a></p>
     </div>
 
     <div class="site-signature">
