--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="site-signature">
-      <p><a href="https://twitter.com/lisa_li_MI"></i> Twitter</a></p>
+      <p><a href="https://twitter.com/lisa_li_MI">Twitter</a></p>
     </div>
 
   </div>
