--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="site-signature">
-     <p> <a href="https://twitter.com/lisa_li_MI" class="twitter-mention-button" data-show-count="false">Tweet to @lisa_li_MI</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
+     <p> <a href="https://twitter.com/intent/tweet?screen_name=lisa_li_MI&ref_src=twsrc%5Etfw" class="twitter-mention-button" data-show-count="false">Tweet to @lisa_li_MI</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
     </div>
 
   </div>
