--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,17 @@
     <div class="site-navigation">
       <p><a href="mailto:shasha.li@unibocconi.it"><i class="fa fa-envelope"></i> E-mail: shasha.li@unibocconi.it</a></p>
     </div>
-
-    <div class="site-signature">
+    
+   <div class="wrapper">
+    <div class="site-navigation">
+      <p><i class="far fa-phone"></i> +39 3342283814</a></p>
+    </div>
+    
+  <div class="site-contact">
+      <p><a href="https://github.com/shasha-li"><i class="fa fa-github"></i> GitHub</a></p>
+    </div>
+       
+  <div class="site-signature">
      <p> 
 <a href="https://twitter.com/intent/tweet?screen_name=lisa_li_MI&ref_src=twsrc%5Etfw" class="twitter-mention-button" data-show-count="false">Tweet to @lisa_li_MI</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
     </div>
