--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,20 +1,20 @@
 <footer class="site-footer">
 
   <div class="wrapper">
+    
     <div class="site-navigation">
       <p><a href="mailto:shasha.li@unibocconi.it"><i class="fa fa-envelope"></i> E-mail: shasha.li@unibocconi.it</a></p>
     </div>
     
-   <div class="wrapper">
     <div class="site-navigation">
       <p><i class="far fa-phone"></i> +39 3342283814</a></p>
     </div>
     
-  <div class="site-contact">
+    <div class="site-contact">
       <p><a href="https://github.com/shasha-li"><i class="fa fa-github"></i> GitHub</a></p>
     </div>
       
-
+ </div>
 </footer>
 
 <!-- Scripts -->
