--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
     </div>
     
     <div class="site-navigation">
-      <p><i class="far fa-phone"></i> +39 3342283814</a></p>
+      <p><i class="fa fa-phone"></i> +39 3342283814</a></p>
     </div>
     
     <div class="site-contact">
