--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
     <nav role="navigation">
       <ul id="js-navigation-menu" class="navigation-menu show">
       <li class="nav-link"><a href="{{ site.baseurl }}/" class="logo"><strong>Home</strong></a>
+      <img align="left" width="80" height="80" src="https://shasha-li.github.io/content/b_logo.png" alt="LI SHASHA 厉莎莎">
       <li class="nav-link"><a href="https://shasha-li.github.io/research"><strong>Research</strong></a>
       <li class="nav-link"><a href="https://shasha-li.github.io/teachings"><strong>Teaching</strong></a>
       <li class="nav-link"><a href="https://shasha-li.github.io/CV"><strong>About me (CV)</strong></a>
