--- a/_includes/head.html
+++ b/_includes/head.html
@@ -73,4 +73,25 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+
+   <!-- container & top left -->
+  <style>
+  .container {
+    position: relative;
+  }
+
+  .topleft {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+    font-size: 18px;
+  }
+
+  img { 
+    width: 100%;
+    height: auto;
+    opacity: 0.3;
+  }
+  </style>
+
 </head>
