--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="navigation" role="banner">
-  <img class="topleft" width="80" height="80" src="https://shasha-li.github.io/content/B_logo.png" alt="LI SHASHA 厉莎莎">
+  <div><img class="topleft" width="80" height="80" src="https://shasha-li.github.io/content/B_logo.png" alt="B">LI SHASHA 厉莎莎</div>
   <div class="navigation-wrapper">
     <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">
       <i class="fa fa-bars"></i>
