--- a/_includes/head.html
+++ b/_includes/head.html
@@ -86,6 +86,12 @@
     left: 0px;
     font-size: 18px;
   }
+  .namef {
+    position: relative;
+    font-weight: bold
+    font-style: italic
+    font-size: 200%
+    }
   </style>
 
 </head>
