--- a/_includes/head.html
+++ b/_includes/head.html
@@ -88,9 +88,9 @@
   }
   .namef {
     position: relative;
-    font-weight: bold
-    font-style: italic
-    font-size: 200%
+    font-weight: bold;
+    font-style: italic;
+    font-size: 200%;
     }
   </style>
 
