--- a/_includes/head.html
+++ b/_includes/head.html
@@ -87,10 +87,11 @@
     font-size: 18px;
   }
   .namef {
-    position: relative;
+    position: absolute;
+    top: 85px;
+    left: 90px;
     font-weight: bold;
-    font-style: italic;
-    font-size: 200%;
+    font-size: 166%;
     }
   </style>
 
