--- a/_includes/head.html
+++ b/_includes/head.html
@@ -88,10 +88,10 @@
   }
   .namef {
     position: absolute;
-    top: 10px;
+    top: 40px;
     left: 90px;
     font-weight: bold;
-    font-size: 166%;
+    font-size: 40px;
     }
   </style>
 
