--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,10 +6,11 @@
       <p><a href="mailto:shasha.li@unibocconi.it"><i class="fa fa-envelope"></i> E-mail: shasha.li@unibocconi.it</a></p>
     </div>
     
-    <div class="site-navigation">
-      <p><i class="fa fa-phone"></i> +39 3342283814</a></p>
+    <br></br>
+    <div class="site-contact">
+      <p><a><i class="fa fa-phone"></i> +39 3342283814</a></p>
     </div>
-    
+      <br></br>
     <div class="site-contact">
       <p><a href="https://github.com/shasha-li"><i class="fa fa-github"></i> GitHub</a></p>
     </div>
