--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,18 +4,23 @@
     
     
     <div class="site-contact">
-      <p><a><i class="fa fa-home"></i> 2E301, Bocconi University, via Roentgen 1, 20136 Milano, Italy</a></p>
+      <p><a><i class="fa fa-home"></i> 2E301, via Roentgen 1, 20136, Italy</a></p>
     </div>
     
      <br></br>
+  
     <div class="site-navigation">
       <p><a href="mailto:shasha.li@unibocconi.it"><i class="fa fa-envelope"></i> E-mail: shasha.li@unibocconi.it</a></p>
     </div>
-    
+  
+     <br></br>
 
     <div class="site-contact">
       <p><a><i class="fa fa-phone"></i> +39 3342283814</a></p>
     </div>
+
+     <br></br>
+
     <div class="site-contact">
       <p><a href="https://github.com/shasha-li"><i class="fa fa-github"></i> GitHub</a></p>
     </div>
