--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
     
     
     <div class="site-contact">
-      <p><a><i class="fa fa-home"></i> 2E301, via Roentgen 1, 20136, Italy</a></p>
+      <p><a><i class="fa fa-home"></i> via Roentgen 1, 20136 Italy</a></p>
     </div>
     
      <br></br>
