--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,16 @@
 
   <div class="wrapper">
     
-    
+ 
+        
     <div class="site-contact">
-      <p><a><i class="fa fa-home"></i> via Roentgen 1, 20136 Italy</a></p>
+      <p><a><i class="far fa-door-open"></i> Office 2E301, floor 2</a></p>
+    </div>
+    
+    <br></br>
+  
+    <div class="site-contact">
+      <p><a><i class="fa fa-home"></i> Via Roentgen 1, 20136 Italy</a></p>
     </div>
     
      <br></br>
