--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
 
   <div class="wrapper">
     
- 
+
         
     <div class="site-contact">
-      <p><a><i class="far fa-door-open"></i> Office 2E301, floor 2</a></p>
+      <p><a><i class="fa fa-calendar" aria-hidden="true"></i> Office 2E301, floor 2</a></p>
     </div>
     
     <br></br>
