--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 
         
     <div class="site-contact">
-      <p><a><i class="fa fa-calendar" aria-hidden="true"></i> Office 2E301, floor 2</a></p>
+      <p><a><i class="fa fa-calendar" aria-hidden="true"></i> Office 2E301, Floor 2</a></p>
     </div>
     
     <br></br>
