--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,16 +11,16 @@
 
   
     <div class="site-navigation">
-      <p><a href="mailto:shasha.li@unibocconi.it"><i class="fa fa-envelope"></i> E-mail: shasha.li@unibocconi.it</a></p>
+      <p><a href="mailto:shasha.li@unibocconi.it"><i class="fa fa-envelope"></i> shasha.li@unibocconi.it</a></p>
     </div>
   
-
+    <div class="site-contact">
+      <p><a href="https://twitter.com/lisa_li_MI"><i class="fa fa-twitter"></i> Twitter</a></p>
+    </div>
 
     <div class="site-contact">
       <p><a><i class="fa fa-phone"></i> +39 3342283814</a></p>
     </div>
-
-
 
     <div class="site-contact">
       <p><a href="https://github.com/shasha-li"><i class="fa fa-github"></i> GitHub</a></p>
