--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
     </div>
     
     <div class="site-contact">
-      <p><a><i class="fa fa-phone"></i> +39 3342283814</a></p>
+      <p><a><i class="fa fa-phone"></i> +39 3342283814 (Italy) or +86 15868916436 (China) </a></p>
     </div>
 
   
