--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,12 +11,11 @@
     
     <div class="site-contact">
       <p><a><i class="fa fa-phone"></i> +39 3342283814 (Italy)</a></p>
-      <p><a><i class="fa fa-phone"></i> +86 15868916436 (China) </a></p>
     </div>
 
   
     <div class="site-navigation">
-      <p><a href="mailto:shasha.li@unibocconi.it"><i class="fa fa-envelope"></i> shasha.li@unibocconi.it</a></p>
+      <p><a href="mailto:shasha.li@phd.unibocconi.it"><i class="fa fa-envelope"></i> shasha.li@phd.unibocconi.it</a></p>
     </div>
   
     <div class="site-contact">
