--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
 
   
     <div class="site-navigation">
-      <p><a href="mailto:shasha.li@phd.unibocconi.it"><i class="fa fa-envelope"></i> shasha.li@phd.unibocconi.it</a></p>
+      <p><a href="mailto:shasha.li@unibocconi.it"><i class="fa fa-envelope"></i> shasha.li@unibocconi.it</a></p>
     </div>
   
     <div class="site-contact">
