--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,8 @@
 
         
     <div class="site-contact">
-      <p><a><i class="fa fa-calendar" aria-hidden="true"></i> Office 2E301, Floor 2</a></p>
-      <p><a><i class="fa fa-home"></i> Via Roentgen 1, 20136 Italy</a></p>
+      <p><a><i class="fa fa-calendar" aria-hidden="true"></i> Office L100-3</a></p>
+      <p><a><i class="fa fa-home"></i> Kleine Märkerstraße 8, 06108 Halle (Saale) Germany</a></p>
     </div>
     
     <div class="site-contact">
@@ -15,7 +15,7 @@
 
   
     <div class="site-navigation">
-      <p><a href="mailto:shasha.li@unibocconi.it"><i class="fa fa-envelope"></i> shasha.li@unibocconi.it</a></p>
+      <p><a href="mailto:shasha.li@iwh-halle.de"><i class="fa fa-envelope"></i> shasha.li@iwh-halle.de</a></p>
     </div>
   
     <div class="site-contact">
