--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
         
     <div class="site-contact">
       <p><a><i class="fa fa-calendar" aria-hidden="true"></i> Office L100-3</a></p>
-      <p><a><i class="fa fa-home"></i> Kleine Märkerstraße 8, 06108 Halle (Saale) Germany</a></p>
+      <p><a><i class="fa fa-home"></i> Kleine Märkerstraße 8, 06108<br>Halle (Saale) Germany</a></p>
     </div>
     
     <div class="site-contact">
