--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,19 +2,20 @@
 
   <div class="wrapper">
     
-
+    <div class="site-contact">
+      <p><a><i class="fa fa-phone"></i> +39 3342283814 (Italy)</a></p>
+      <p><a><i class="fa fa-calendar" aria-hidden="true"></i> Office L100-03</a></p>
+      <p><a><i class="fa fa-home"></i> Kleine Märkerstraße 8</a></p>
+      <p><a><i class="fa fa-home" aria-hidden="true"></i> 06108 Halle (Saale), Germany</a></p>
+    </div>
+ 
     <div class="site-navigation">
       <p><a href="mailto:shasha.li@iwh-halle.de"><i class="fa fa-envelope"></i> shasha.li@iwh-halle.de</a></p>
       <p><a href="https://twitter.com/lisa_li_MI"><i class="fa fa-twitter"></i> Twitter</a></p>
       <p><a href="https://github.com/shasha-li"><i class="fa fa-github"></i> GitHub</a></p>
     </div>
     
-    <div class="site-contact">
-      <p><a><i class="fa fa-phone"></i> +39 3342283814 (Italy)</a></p>
-      <p><a><i class="fa fa-calendar" aria-hidden="true"></i> Office L100-3</a></p>
-      <p><a><i class="fa fa-home"></i> Kleine Märkerstraße 8, 06108 Halle (Saale), Germany</a></p>
-    </div>
- 
+
       
  </div>
 </footer>
