--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       <p><a><i class="fa fa-phone"></i> +39 3342283814 (Italy)</a></p>
       <p><a><i class="fa fa-calendar" aria-hidden="true"></i> Office L100-03</a></p>
       <p><a><i class="fa fa-home"></i> Kleine Märkerstraße 8</a></p>
-      <p><a><i class="fa fa-home" aria-hidden="true"></i> 06108 Halle (Saale), Germany</a></p>
+      <p><a><i class="fas fa-city" aria-hidden="true"></i> 06108 Halle (Saale), Germany</a></p>
     </div>
  
     <div class="site-navigation">
