--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="navigation" role="banner">
- <img class="topleft" width="476" height="80" src="https://shasha-li.github.io/content/IWHM.png" alt="B">
+ <img class="topleft" width="446" height="75" src="https://shasha-li.github.io/content/IWHM.png" alt="IWH">
   <div class="navigation-wrapper">
     <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">
       <i class="fa fa-bars"></i>
