--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
     
     <div class="site-contact">
-      <p><a><i class="fa fa-phone"></i> +39 3342283814 (Italy)</a></p>
+      <p><a><i class="fa fa-phone"></i> +49 345 7753-743</a></p>
       <p><a><i class="fa fa-calendar" aria-hidden="true"></i> Office L100-03</a></p>
       <p><a><i class="fa fa-home"></i> Kleine Märkerstraße 8</a></p>
       <p><a><i class="fa fa-location-arrow" aria-hidden="true"></i> 06108 Halle (Saale), Germany</a></p>
