--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,7 @@
       <p><a href="mailto:shasha.li@iwh-halle.de"><i class="fa fa-envelope"></i> shasha.li@iwh-halle.de</a></p>
       <p><a href="https://twitter.com/lisa_li_MI"><i class="fa fa-twitter"></i> Twitter</a></p>
       <p><a href="https://github.com/shasha-li"><i class="fa fa-github"></i> GitHub</a></p>
+      <p><a href="https://papers.ssrn.com/sol3/cf_dev/AbsByAuth.cfm?per_id=4394099"><i class="fa fa-pencil"></i> SSRN</a></p>
     </div>
     
 
